src/objects/ADvendio__KeyAdPriceAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Key Ad Price Assignments</relationshipLabel>
        <relationshipName>KeyAdPriceAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Key__c</fullName>
        <label>Key</label>
        <referenceTo>ADvendio__Key__c</referenceTo>
        <relationshipLabel>Key Ad Price Assignments</relationshipLabel>
        <relationshipName>KeyAdPriceAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier for the record</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_TargetingSurcharge__c</fullName>
        <description>Targeting Aufschlag. Wird vom Werbemittel vererbt falls dieses TT- oder BT-fähig ist.</description>
        <inlineHelpText>Targeting Aufschlag. Wird vom Werbemittel vererbt falls dieses TT- oder BT-fähig ist.</inlineHelpText>
        <label>Targeting Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Key Ad Price Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KAP-{00000000}</displayFormat>
        <label>Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Ad Price Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>